[UPDATE]add values to print

--- a/0x04-readelf/Makefile
+++ b/0x04-readelf/Makefile
@@ -4,7 +4,7 @@ FLAGS=-Wall -Werror -Wextra -pedantic
 0-hreadelf:
 	$(CC) $(PROG0).c freewilli.c getfileheader.c \
 	initvars.c openfile.c printfileheader.c \
-	errorhandler.c $(FLAGS) -o $(PROG0)
+	errorhandler.c equivalences.c $(FLAGS) -o $(PROG0)
 all: 0-hreadelf
 
 clean:
