--- a/0x09-strace/Makefile
+++ b/0x09-strace/Makefile
@@ -2,7 +2,7 @@ CC = gcc
 CFLAGS = -Wall -Werror -Wextra -pedantic
 
 0_strace.o: 0_strace.c
-	$(CC) $(CFLAGS) 0_strace.c
+	$(CC) -c $(CFLAGS) 0_strace.c
 
-strace_0: syscalls.h 0_strace.c
+strace_0: syscalls.h 0_strace.o
 	$(CC) $(CFLAGS) syscalls.h 0_strace.o -o strace_0
