[UPDATE] Add strace_1

--- a/0x09-strace/Makefile
+++ b/0x09-strace/Makefile
@@ -6,3 +6,9 @@ CFLAGS = -Wall -Werror -Wextra -pedantic
 
 strace_0: syscalls.h 0_strace.o
 	$(CC) $(CFLAGS) syscalls.h 0_strace.o -o strace_0
+
+1_strace.o: 1_strace.c
+	$(CC) -c $(CFLAGS) 1_strace.c
+
+strace_1: syscalls.h 1_strace.o
+	$(CC) $(CFLAGS) syscalls.h 1_strace.o -o strace_1
