--- a/0x09-strace/Makefile
+++ b/0x09-strace/Makefile
@@ -12,3 +12,9 @@ strace_0: syscalls.h 0_strace.o
 
 strace_1: syscalls.h 1_strace.o
 	$(CC) $(CFLAGS) syscalls.h 1_strace.o -o strace_1
+
+2_strace.o: 2_strace.c
+	$(CC) -c $(CFLAGS) 2_strace.c
+
+strace_2: syscalls.h 2_strace.o
+	$(CC) $(CFLAGS) syscalls.h 2_strace.o -o strace_2
