--- a/0x0C-sockets/Makefile
+++ b/0x0C-sockets/Makefile
@@ -2,3 +2,13 @@ CC	:= gcc
 CFLAGS := -Wall -Werror -Wextra -pedantic
 
 todo_api_0: 4-server.c $(CC) $(FLAGS) -o $@
+
+todo_api_1: 4-server.c $(CC) $(FLAGS) -o $@
+
+todo_api_2: 4-server.c $(CC) $(FLAGS) -o $@
+
+todo_api_3: 4-server.c $(CC) $(FLAGS) -o $@
+
+todo_api_4: 4-server.c $(CC) $(FLAGS) -o $@
+
+todo_api_5: 4-server.c $(CC) $(FLAGS) -o $@
