--- a/0x0C-sockets/Makefile
+++ b/0x0C-sockets/Makefile
@@ -1,5 +1,5 @@
-CC	:= gcc
-CFLAGS := -Wall -Werror -Wextra -pedantic
+CC = gcc
+CFLAGS = -Wall -Werror -Wextra -pedantic
 
 todo_api_0: 4-server.c $(CC) $(FLAGS) -o $@
 
