--- a/0x0C-sockets/Makefile
+++ b/0x0C-sockets/Makefile
@@ -1,14 +1,20 @@
-CC = gcc
-CFLAGS = -Wall -Werror -Wextra -pedantic
+CC := gcc
+CFLAGS := -Wall -Werror -Wextra -pedantic
 
-todo_api_0: 4-server.c $(CC) $(FLAGS) -o $@
+todo_api_0: 
+	$(CC) $(FLAGS) 4-server.c -o $@
 
-todo_api_1: 4-server.c $(CC) $(FLAGS) -o $@
+todo_api_1: 4-server.c
+	$(CC) $(FLAGS) 4-server.c -o $@
 
-todo_api_2: 4-server.c $(CC) $(FLAGS) -o $@
+todo_api_2: 4-server.c
+	$(CC) $(FLAGS) 4-server.c -o $@
 
-todo_api_3: 4-server.c $(CC) $(FLAGS) -o $@
+todo_api_3: 4-server.c
+	$(CC) $(FLAGS) 4-server.c -o $@
 
-todo_api_4: 4-server.c $(CC) $(FLAGS) -o $@
+todo_api_4: 4-server.c
+	$(CC) $(FLAGS) 4-server.c -o $@
 
-todo_api_5: 4-server.c $(CC) $(FLAGS) -o $@
+todo_api_5: 4-server.c
+	$(CC) $(FLAGS) 4-server.c -o $@
